feat: analytics added
